# phone-number-formatter

./: .dockerignore  CHANGELOG.md  LICENCE  README.md  pyproject.toml  requirements.txt  setup.py
.actor/: Dockerfile  actor.json  input_schema.json
examples/: basic_usage.py  csv_processing.py
src/: format_phone_numbers.py  main.py
src/phone_number_formatter/: __init__.py  cli.py  core.py  main.py
